# jepa-amp

./: .gitignore  DATA_SOURCES.md  FAILURES.md  NOTES.md  README.md  REPRODUCE.md  main.py  pyproject.toml  run_generation_queue.sh  run_v2_queue.sh  seq_6.fasta  train_log.txt
configs/: amp_classifier_868k.yaml  amp_classifier_868k_v3.yaml  amp_classifier_868k_v4.yaml  amp_classifier_868k_v5.yaml  amp_classifier_amplify_identical.yaml  amp_classifier_v6.yaml  amp_classifier_v7.yaml  cancer_ic50_jepa.yaml  comparison_formal.yaml  esm2_amp_amplify_identical.yaml  esm2_amp_v6.yaml  esm2_mic.yaml  esm2_mic_formal.yaml  esm2_mic_smoke.yaml  finetune.yaml  finetune_28k.yaml  finetune_868k.yaml  finetune_868k_diffusion.yaml  finetune_868k_mlm_v4.yaml  finetune_868k_nar.yaml  finetune_868k_v2.yaml  finetune_868k_v3.yaml  finetune_868k_v4.yaml  finetune_868k_v4_no_aux.yaml  finetune_868k_v4_no_dropout.yaml  finetune_868k_v5.yaml  finetune_868k_v6.yaml  finetune_868k_v7.yaml  finetune_grampa_v5.yaml  generated_evidence_bootstrap.yaml  generated_peptide_plausibility_formal.yaml  generated_peptide_plausibility_smoke.yaml  generation_control_ablation.yaml  generation_control_diffusion.yaml  generation_control_formal.yaml  generation_control_nar.yaml  generation_control_smoke.yaml  generation_control_v6.yaml  generation_control_v7.yaml  jepa_pretrain.yaml  (+13 more)
docs/: METHODS.md  PAPER_STATUS.md  RESULTS.md
eval_results/: amp_panel_predictions.json  baseline_eval_grampa.json  baseline_scores_cond_gen_v3.json  cancer_selectivity_predictions.json  chemokinostatin_predictions.json  (+18 more)
(+134 files in other folders)
